--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ python-multipart==0.0.6
 pymysql==1.1.0
 cryptography==42.0.0
 requests>=2.31.0
+beautifulsoup4>=4.12.0
+PyPDF2>=3.0.0
+python-docx>=1.1.0
